@@ -24,28 +24,30 @@ FormFactorSphereLogNormalRadius::FormFactorSphereLogNormalRadius(double mean, do
     : m_mean(mean), m_scale_param(scale_param), m_n_samples(n_samples)
 {
     setName("FormFactorSphereLogNormalRadius");
-    mP_distribution.reset(new DistributionLogNormal(m_mean, m_scale_param));
     registerParameter("MeanRadius", &m_mean).setUnit("nm").setNonnegative();
     registerParameter("ScaleParameter", &m_scale_param);
-    if (!mP_distribution)
-        return;
-    // Init vectors:
-    m_form_factors.clear();
+
+    DistributionLogNormal distri(m_mean, m_scale_param);
+    m_radii.clear();
     m_probabilities.clear();
-    for (ParameterSample& sample : mP_distribution->equidistantSamples(m_n_samples)) {
-        m_form_factors.push_back(new FormFactorFullSphere(sample.value));
+    for (ParameterSample& sample : distri.equidistantSamples(m_n_samples)) {
+        m_radii.push_back(sample.value);
         m_probabilities.push_back(sample.weight);
     }
+
     onChange();
+}
+
+FormFactorSphereLogNormalRadius* FormFactorSphereLogNormalRadius::clone() const
+{
+    return new FormFactorSphereLogNormalRadius(m_mean, m_scale_param, m_n_samples);
 }
 
 complex_t FormFactorSphereLogNormalRadius::evaluate_for_q(cvector_t q) const
 {
-    if (m_form_factors.size() < 1)
-        return 0.0;
-    complex_t result(0.0);
-    for (size_t i = 0; i < m_form_factors.size(); ++i)
-        result += m_form_factors[i]->evaluate_for_q(q) * m_probabilities[i];
+    complex_t result = 0;
+    for (size_t i = 0; i < m_radii.size(); ++i)
+        result += someff::ffSphere(q, m_radii[i]) * m_probabilities[i];
     return result;
 }
 
