@@ -15,8 +15,6 @@
 #ifndef BORNAGAIN_CORE_SOFTPARTICLE_FORMFACTORSPHERELOGNORMALRADIUS_H
 #define BORNAGAIN_CORE_SOFTPARTICLE_FORMFACTORSPHERELOGNORMALRADIUS_H
 
-#include "Core/HardParticle/FormFactorFullSphere.h"
-#include "Core/Parametrization/Distributions.h"
 #include "Core/Scattering/IFormFactorBorn.h"
 #include "Core/Tools/SafePointerVector.h"
 #include <memory>
@@ -29,10 +27,8 @@ class BA_CORE_API_ FormFactorSphereLogNormalRadius : public IFormFactorBorn
 public:
     FormFactorSphereLogNormalRadius(double mean, double scale_param, size_t n_samples);
 
-    FormFactorSphereLogNormalRadius* clone() const override final
-    {
-        return new FormFactorSphereLogNormalRadius(m_mean, m_scale_param, m_n_samples);
-    }
+    FormFactorSphereLogNormalRadius* clone() const override final;
+
     void accept(INodeVisitor* visitor) const override final { visitor->visit(this); }
 
     double radialExtension() const override final { return m_mean; }
@@ -47,9 +43,7 @@ private:
     double m_scale_param;
     size_t m_n_samples;
 
-    std::unique_ptr<DistributionLogNormal> mP_distribution;
-
-    SafePointerVector<IFormFactorBorn> m_form_factors;
+    std::vector<double> m_radii;
     std::vector<double> m_probabilities;
 };
 
